apps/media/overseer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: linuxserver/overseerr:1.34.0
        ports:
          - containerPort: 5055

        volumeMounts:
          - mountPath: /config
            name: overseerr-pv-config

      restartPolicy: Always

      volumes:
        - name: overseerr-pv-config
          persistentVolumeClaim:
            claimName: overseerr-pv-config
