apps/media/overseer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  selector:
    app: overseerr
  ports:
  - name: overseerr
    port: 5055
    targetPort: 5055
